// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/checkbox/CheckboxField should render a basic Checkbox when no field property is provided 1`] = `
<Checkbox
  label="Pistachio"
  name="pistachio"
/>
`;

exports[`components/checkbox/CheckboxField should render isChecked=false with value=null 1`] = `
<Checkbox
  isChecked={false}
  label="Red Velvet"
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;

exports[`components/checkbox/CheckboxField should render isChecked=false with value=undefined 1`] = `
<Checkbox
  isChecked={false}
  label="Red Velvet"
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;

exports[`components/checkbox/CheckboxField should render isChecked=true with value=value 1`] = `
<Checkbox
  isChecked={true}
  label="Red Velvet"
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;
